--- a/src/style.css
+++ b/src/style.css
@@ -468,6 +468,7 @@ button:focus {
   transition: all 0.5s ease 0s !important;
   height: 100% !important;
   border-radius: 0.9rem !important;
+  padding: 1rem 0;
 }
 .project-card-view:hover {
   transform: scale(1.02) !important;
@@ -515,8 +516,12 @@ button:focus {
   margin: auto;
 }
 
+.card-body {
+  padding: 1rem 2rem !important;
+}
+
 .card-text {
-  font-size: 0.9rem !important;
+  font-size: 0.8rem !important;
 }
 
 .blog-img {
